--- a/tutorial/Week-5/notebook.ipynb
+++ b/tutorial/Week-5/notebook.ipynb
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "\n",
     "from src.initialization import credential_init\n",
     "\n",
@@ -137,6 +137,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cdde5ed-0e16-45c5-b3eb-28eb59c9700b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# image_str"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "52c6d8b3-3d42-4ec0-8091-d2c27486ef0d",
    "metadata": {},
@@ -196,6 +206,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15d7ab65-4d28-4684-927d-b80d44d72b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import HumanMessagePromptTemplate\n",
+    "\n",
+    "HumanMessagePromptTemplate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a532a168-db96-4d21-9b7d-3bc603c37488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "06bce1bb-8ba8-4be1-b8c4-4748fbf9c747",
    "metadata": {},
    "outputs": [],
@@ -216,6 +246,14 @@
     "chain = prompt|model\n",
     "\n",
     "chain.invoke(input={\"image_str\": image_str})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "475d85fc-b348-4460-aa72-a282401e78a5",
+   "metadata": {},
+   "source": [
+    "將`問題`和`圖片`都變成輸入變數。"
    ]
   },
   {
@@ -242,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bcd4818-6017-4844-ad0c-136d457cb388",
+   "metadata": {},
+   "source": [
+    "範圍似乎太廣了，給更多的條件: 來源是Azur Lane(碧藍航線)。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c5dd542e-8ca5-45d0-bba1-1e2749f1788e",
@@ -249,6 +295,102 @@
    "outputs": [],
    "source": [
     "chain.invoke(input={\"image_str\": image_str, \"question\": \"Are you able to connect this image with any anime character? Hint: Azur Lane.\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9e1ad8-f216-481d-b70c-f81bf3ded7ab",
+   "metadata": {},
+   "source": [
+    "將Chain更加一步強化: 圖片路徑作為輸入變數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb3f8a2e-f01b-4e18-8b01-e2635854217b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
+    "\n",
+    "# human_prompt = PromptTemplate(template='existing ingredients:[{existing_ingredients}]; '\n",
+    "#                                        'suggested ingredients: [{suggested_ingredients}]\\n; '\n",
+    "#                                        'format instruction: {format_instructions}',\n",
+    "#                               input_variables=[\"existing_ingredients\", \"suggested_ingredients\"],\n",
+    "#                               partial_variables={\"format_instructions\": format_instructions}\n",
+    "#                               )\n",
+    "\n",
+    "# human_message = HumanMessagePromptTemplate(prompt=human_prompt)\n",
+    "\n",
+    "# chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
+    "#                                                 human_message\n",
+    "#                                                 ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55daf597-22f3-45ae-a20a-5cb9f357a6d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter\n",
+    "\n",
+    "from langchain_core.runnables import RunnablePassthrough, RunnableLambda\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "human_message_template = HumanMessagePromptTemplate.from_template(\n",
+    "    template=[\n",
+    "        {'type': 'text', 'text': '{question}'},\n",
+    "        {'type': 'image_url', 'image_url': {'url': 'data:image/jpeg;base64,{image_str}'}}\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "# Create a Prompt Template\n",
+    "prompt = ChatPromptTemplate.from_messages([human_message_template])\n",
+    "\n",
+    "# Generate the Chain\n",
+    "chain = RunnablePassthrough.assign(image_str=itemgetter('image_path')|RunnableLambda(image_to_base64))|prompt|model|StrOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16643141-1d27-4f61-bb40-4a713390ce10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = os.path.join(get_project_dir(), 'tutorial/Week-5/nDATs9kmQk7sNrx5ELrhZ.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d5e1db-3475-47fd-8a88-2e615ca6fac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chain = RunnablePassthrough.assign(image_str=itemgetter('image_path')|RunnableLambda(image_to_base64))|prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42ac928-6d76-4251-a1ba-78f5d77e3e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"question\": \"What is in this image?\",\n",
+    "              \"image_path\": image_path})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e82f97-0d3e-4fbd-ae9f-8f6678feca40",
+   "metadata": {},
+   "source": [
+    "直接將圖片URL作為變數輸入"
    ]
   },
   {
@@ -274,40 +416,23 @@
    },
    "outputs": [],
    "source": [
-    "human_message = HumanMessage(content=[{'type': 'text', \n",
-    "                                       'text': 'What is in this image?'},\n",
-    "                                      {'type': 'image_url',\n",
-    "                                       'image_url': {\n",
-    "                                           'url': \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"}\n",
-    "                                      }])\n",
+    "human_message_template = HumanMessagePromptTemplate.from_template(\n",
+    "    template=[\n",
+    "        {'type': 'text', 'text': '{question}'},\n",
+    "        {'type': 'image_url', 'image_url': {'url': '{image_url}'}}\n",
+    "    ],\n",
+    ")\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([human_message])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "664b2db3-00cb-423c-ae4d-0d83571f2fec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "chain = prompt|model\n",
+    "# Create a Prompt Template\n",
+    "prompt = ChatPromptTemplate.from_messages([human_message_template])\n",
     "\n",
-    "chain.invoke(input={})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea20aa0e-ffbd-4d24-a77f-d30ed220dbed",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "prompt = ChatPromptTemplate.from_messages([human_message])"
+    "# Generate the Chain\n",
+    "chain = RunnablePassthrough.assign(image_url=itemgetter('url'))|prompt|model|StrOutputParser()\n",
+    "\n",
+    "url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
+    "                                   \n",
+    "chain.invoke({\"question\": \"What is in this image?\",\n",
+    "              \"url\": url})"
    ]
   },
   {
@@ -335,7 +460,8 @@
    },
    "outputs": [],
    "source": [
-    "human_message = HumanMessage(content=[{'type': 'text', \n",
+    "human_message_template = HumanMessagePromptTemplate.from_template(\n",
+    "    template=[{'type': 'text', \n",
     "                                       'text': 'What are in these images? Is there any difference between them?'},\n",
     "                                      {'type': 'image_url',\n",
     "                                       'image_url': {\n",
@@ -344,22 +470,21 @@
     "                                      {'type': 'image_url',\n",
     "                                       'image_url': {\n",
     "                                           'url': \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"}\n",
-    "                                      }])\n",
+    "                                      }],\n",
+    ")\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([human_message])\n",
+    "# Create a Prompt Template\n",
+    "prompt = ChatPromptTemplate.from_messages([human_message_template])\n",
+    "\n",
     "model.invoke(prompt.format())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c37a324e-30cb-43e8-a3d2-5f61a0c2400a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "7cdbf6a0-0c39-4b77-ba13-1a2b1b93d073",
+   "metadata": {},
    "source": [
-    "model.invoke(prompt.format())"
+    "有啥點子想試試看的嗎? 現場實操，希望不會翻車"
    ]
   },
   {
@@ -599,7 +724,8 @@
    },
    "outputs": [],
    "source": [
-    "documents[0]"
+    "print(documents[0])\n",
+    "print(len(documents[0].page_content))"
    ]
   },
   {
@@ -611,7 +737,8 @@
    },
    "outputs": [],
    "source": [
-    "documents[1]"
+    "print(documents[1])\n",
+    "print(len(documents[1].page_content))"
    ]
   },
   {
@@ -647,7 +774,8 @@
    },
    "outputs": [],
    "source": [
-    "documents[0]"
+    "print(documents[0])\n",
+    "print(len(documents[0].page_content))"
    ]
   },
   {
