--- a/tutorial/DataScienceIntro/Week-1/notebook.ipynb
+++ b/tutorial/DataScienceIntro/Week-1/notebook.ipynb
@@ -29,7 +29,7 @@
    "id": "0d5a9fae-28be-4e04-bf74-fc79638dab62",
    "metadata": {},
    "source": [
-    "Example 1:\n",
+    "### Example 1:\n",
     "\n",
     "https://www.statology.org/when-to-reject-null-hypothesis/\n",
     "\n",
@@ -106,6 +106,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba02d4cc-ceb1-4267-a076-90579f09b397",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "z_score"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fdc80b88-6959-46d8-9b94-602783ed6569",
    "metadata": {},
@@ -132,9 +144,9 @@
     "\n",
     "$${t_{0.025, 39}} = 2.023$$\n",
     "\n",
-    "Because $|z_score| > {t_{0.025, 39}}$ , we reject the hypothesis H0\n",
+    "Because $|z_{score}| > {t_{0.025, 39}}$ , we reject the hypothesis $H_0$\n",
     "\n",
-    "On the other hand, if $|z_score| <{t_{0.025, 39}}$, we said that we do not reject the null hypothesis."
+    "On the other hand, if $|z_{score}| <{t_{0.025, 39}}$, we said that we do not reject the null hypothesis."
    ]
   },
   {
@@ -184,12 +196,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "903745ac-46a3-46ea-ad9f-93ba2f7997b2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(lower_limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b3d8bc9-6c47-4751-8c3c-e94e9883fe25",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(upper_limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b81b752d-2f85-4e49-a5c9-0021b55a0fa0",
    "metadata": {},
    "outputs": [],
    "source": [
     "s_n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a5f31be-d97f-442d-a554-24c2607461ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -235,8 +279,32 @@
     "\n",
     "s_n = 5.85\n",
     "\n",
-    "upper_limit = 300 + z * s_n\n",
-    "lower_limit = 300 - z * s_n"
+    "upper_limit = 300 + t * s_n\n",
+    "lower_limit = 300 - t * s_n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faaefe7c-325e-475c-8c9e-53193f3ee6ff",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "upper_limit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68be1a47-bfc7-48a0-92b3-0ffa366314b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lower_limit"
    ]
   },
   {
@@ -284,7 +352,29 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "stats.t.ppf(0.025, 24)"
+    "stats.t.ppf(0.025, 39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac35568-48af-48d5-b33a-3fae5a6f6f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.t.ppf(1-0.025, 39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6910dea-cd52-420b-a852-e49fc8d7d992",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "stats.t.ppf(1-0.025, 24)"
    ]
   },
   {
@@ -319,22 +409,22 @@
     "    s_n = std/np.sqrt(sample_size)\n",
     "\n",
     "    # Calculate the t-statistic\n",
-    "    z_scopre = (mean_sample - mean_hypothesis)/(s_n)\n",
+    "    t = (mean_sample - mean_hypothesis)/(s_n)\n",
     "\n",
     "    # Calculate the critical t-value for the given confidence level\n",
     "    q = (1+confidence)/2\n",
     "    df = sample_size - 1\n",
-    "    t = stats.t.ppf(q, df)\n",
+    "    z_score = stats.t.ppf(q, df)\n",
     "\n",
     "    # Determine whether to reject the null hypothesis\n",
-    "    if abs(z_score) > t:\n",
+    "    if abs(t) > z_score:\n",
     "        reject = True\n",
     "    else:\n",
     "        reject = False\n",
     "\n",
     "    # Calculate the confidence interval\n",
-    "    upper_limit = mean_hypothesis + t * s_n\n",
-    "    lower_limit = mean_hypothesis - t * s_n\n",
+    "    upper_limit = mean_sample + z_score * s_n\n",
+    "    lower_limit = mean_sample - z_score * s_n\n",
     "\n",
     "    return reject, lower_limit, upper_limit, z_score, t\n",
     "    "
@@ -512,13 +602,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb3cf4b-fed6-49ce-bb1f-de08547a25a7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "temperature_df.filter(like='ay')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ef77b9ce-c237-4a15-a14f-884d3a027e39",
    "metadata": {},
    "source": [
-    "#### apply\n",
+    "temperature_df['Jan']#### apply\n",
     "\n",
     "- Apply a function along an axis of the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81970afb-11e0-4fec-9c55-ed6066c740d4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "temperature_df['Jan']"
    ]
   },
   {
@@ -650,7 +764,7 @@
     "})\n",
     "\n",
     "# Concatenate DataFrames along rows\n",
-    "concat_df = pd.concat([df3, df4], axis=0)\n",
+    "concat_df = pd.concat([df3, df4], axis=0, ignore_index=True)\n",
     "print(concat_df)"
    ]
   },
@@ -755,11 +869,19 @@
     "pivot_table = pd.pivot_table(df, \n",
     "                             values=['Sales', 'Expenses'], \n",
     "                             index=['Date'], \n",
-    "                             columns=['City'], \n",
+    "                             # columns=['City'], \n",
     "                             aggfunc='sum')\n",
     "\n",
     "print(pivot_table)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4002917-cf35-46bd-81a9-123732b65b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -778,7 +900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
