--- a/tutorial/DataScienceIntro/Week-2/notebook.ipynb
+++ b/tutorial/DataScienceIntro/Week-2/notebook.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "861b5359-dd53-4cda-a56c-43b29a8a8168",
    "metadata": {},
    "outputs": [],
@@ -105,12 +105,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "be95d77d-3d1a-4964-a25c-acfa32c20f50",
    "metadata": {},
    "outputs": [],
    "source": [
     "t = (300 - 305)/(s_p * np.sqrt(1/40 + 1/38))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3cb8c176-683c-43fd-9730-d37932bcafaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.2507848831518829"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
    ]
   },
   {
@@ -123,14 +144,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "eebad5e4-4e6c-4426-85c7-82a97f79454f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy import stats\n",
     "\n",
-    "z_value = stats.t.ppf(0.05, 40 + 38 - 2)"
+    "z_score = stats.t.ppf(0.025, 40 + 38 - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1b6460c9-99f6-42e3-8a54-0a1936ad3cb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.9916726096446644"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score"
    ]
   },
   {
@@ -138,9 +180,9 @@
    "id": "6bef0ad4-fcff-4c8b-b43d-99e1282eff69",
    "metadata": {},
    "source": [
-    "$$ t_{0.95, 76} = 1.665 $$\n",
+    "<!-- $$ t_{0.95, 76} = 1.665 $$\n",
     "\n",
-    "Because $ t < z_{0.95, 76} $, we reject the null hypothesis"
+    "Because $ t < z_{0.95, 76} $, we reject the null hypothesis -->"
    ]
   },
   {
@@ -173,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b6df3363-1308-4007-9861-82c10a5b7fd6",
    "metadata": {},
    "outputs": [],
@@ -185,6 +227,155 @@
     "    return s_p\n",
     "    \n",
     "s_p = run_sp(6.4147, 249, 6.10771, 79)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84dab1ba-5b7f-4c89-8927-838afd9787ed",
+   "metadata": {},
+   "source": [
+    "## Simulation Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b5112f07-4e94-46d0-870b-05424672d006",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 1: [52.48357077 49.30867849 53.23844269 57.61514928 48.82923313 48.82931522\n",
+      " 57.89606408 53.83717365 47.65262807 52.71280022 47.68291154 47.67135123\n",
+      " 51.20981136 40.43359878 41.37541084 47.18856235 44.9358444  51.57123666\n",
+      " 45.45987962 42.93848149 57.32824384 48.8711185  50.33764102 42.87625907\n",
+      " 47.27808638 50.55461295 44.24503211 51.87849009 46.99680655 48.54153125\n",
+      " 46.99146694 59.26139092 49.93251388 44.71144536 54.11272456 43.89578175\n",
+      " 51.04431798 40.20164938 43.35906976 50.98430618 53.6923329  50.85684141\n",
+      " 49.42175859 48.49448152 42.60739005 46.40077896 47.69680615 55.28561113\n",
+      " 51.71809145 41.18479922 51.62041985 48.0745886  46.61539    53.05838144\n",
+      " 55.15499761 54.6564006  45.80391238 48.45393812 51.65631716 54.87772564\n",
+      " 47.60412881 49.07170512 44.46832513 44.01896688 54.06262911 56.78120014\n",
+      " 49.63994939 55.01766449 51.80818013 46.77440123 51.80697803 57.69018283\n",
+      " 49.8208698  57.82321828 36.90127448 54.10951252 50.43523534 48.50496325\n",
+      " 50.45880388 40.06215543 48.90164056 51.78556286 57.38947022 47.40864891\n",
+      " 45.95753199 47.49121478 54.57701059 51.64375555 47.35119898 52.56633717\n",
+      " 50.48538775 54.84322495 46.48973453 48.36168927 48.03945923 42.68242526\n",
+      " 51.48060139 51.30527636 50.02556728 48.82706433]\n",
+      "Sample 2: [47.92314629 52.89677339 53.28642742 50.98861365 54.19357144 57.02025428\n",
+      " 64.43092951 55.87288906 56.28775195 54.62777042 45.40614392 54.86743062\n",
+      " 55.30115105 67.31621056 54.03819518 56.50773671 54.82644115 49.15660981\n",
+      " 60.71411407 58.75966516 58.95515974 50.45306273 62.01397155 47.99074469\n",
+      " 57.93428547 65.95227813 50.04731837 52.16851135 55.49825683 52.48262173\n",
+      " 47.24668284 55.34281487 49.68848143 57.36796215 50.40287883 62.74967203\n",
+      " 51.08373354 53.38969242 59.06758609 48.84567842 56.13729967 61.53571377\n",
+      " 46.96258383 55.92316929 56.29941397 58.90911436 48.81524645 48.39771693\n",
+      " 57.60970783 56.48492337 56.25246425 56.73224105 51.59987639 56.16126849\n",
+      " 56.46536237 51.42824291 64.32887256 57.3691646  49.04348251 58.28276804\n",
+      " 50.12659165 58.93542302 60.7929779  50.89658841 59.81688065 57.06390463\n",
+      " 59.1103008  64.48396491 53.77305942 51.23131918 50.55242785 50.92094858\n",
+      " 54.61449145 56.70575987 56.383454   59.13591625 55.06500946 62.26767039\n",
+      " 53.67671583 68.60084583 58.12833674 50.71421222 49.64553751 57.41236208\n",
+      " 53.88268607 58.57000247 57.36618812 54.63585544 50.76603141 47.42576388\n",
+      " 52.76742524 59.28199397 56.07046872 48.77130611 55.86590463 56.9265869\n",
+      " 50.58071282 55.76862553 55.29104359 49.28514851]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Seed for reproducibility\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Generate sample data\n",
+    "# Sample 1: mean = 50, std dev = 5, 100 data points\n",
+    "sample1 = np.random.normal(loc=50, scale=5, size=100)\n",
+    "\n",
+    "# Sample 2: mean = 55, std dev = 5, 100 data points\n",
+    "sample2 = np.random.normal(loc=55, scale=5, size=100)\n",
+    "\n",
+    "print(\"Sample 1:\", sample1)\n",
+    "print(\"Sample 2:\", sample2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9973c785-8487-4a8f-ae26-40c3ee41ca56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_1 = sample1.mean()\n",
+    "mean_2 = sample2.mean()\n",
+    "std_1 = sample1.std(ddof=1)\n",
+    "std_2 = sample2.std(ddof=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c1351da1-268b-41f9-90c7-a4b175df5934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_p = run_sp(std_1, len(sample1), std_2, len(sample2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "36f51e3a-4a95-4238-9e5e-dcd371f92b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = (mean_1 - mean_2)/(s_p * np.sqrt(1/(len(sample1)) + 1/(len(sample2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c79ab6b1-b023-48f4-b0c1-4472a119bd8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8.551459943248737"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "54b79fd2-73d5-4f12-85af-bcb5016fa2bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-8.551459943248737, pvalue=3.2929614287035575e-15, df=198.0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "ttest_ind(sample1, sample2)"
    ]
   },
   {
@@ -609,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
