--- a/tutorial/DataScienceIntro/Week-3/notebook.ipynb
+++ b/tutorial/DataScienceIntro/Week-3/notebook.ipynb
@@ -187,11 +187,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e324d8d-be08-47d0-8f0c-9744d5d4326d",
+   "cell_type": "markdown",
+   "id": "bef828d2-812d-479c-8ed4-3537485a18b8",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Requests\n",
     "\n",
@@ -283,8 +281,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "temperature_df = pd.read_excel(\"../Week-1/Data.xlsx\", sheet_name='Temperature', index_col=0)\n",
     "rainfall_df = pd.read_excel(\"../Week-1/Data.xlsx\", sheet_name='Rainfall', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f39775-e8f4-4aa7-8a40-260d69321c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rainfall_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1a3f3fa-4cff-4de6-94d5-fe0311f47035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temperature_df"
    ]
   },
   {
@@ -418,7 +438,7 @@
    "outputs": [],
    "source": [
     "# Data for the pie chart\n",
-    "labels = ['New York', 'Los Angeles', 'Chicago', 'Houston', 'Phoenix']\n",
+    "labels = ['Los Angeles', 'New York', 'Chicago', 'Houston', 'Phoenix']\n",
     "sales = [250, 200, 150, 100, 90]\n",
     "colors = ['#ff9999','#66b3ff','#99ff99','#ffcc99','#c2c2f0']  # Optional: Custom colors\n",
     "\n",
@@ -564,7 +584,7 @@
     "\n",
     "# Create a histogram\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(data, bins=30, alpha=0.75, color='blue', edgecolor='black', histtype='bar', rwidth=0.85)\n",
+    "plt.hist(data, bins=30, alpha=0.5, color='blue', edgecolor='red', histtype='bar', rwidth=1)\n",
     "\n",
     "# Add labels and title\n",
     "plt.xlabel('Value')\n",
@@ -668,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
